--- a/assets/style.css
+++ b/assets/style.css
@@ -111,25 +111,37 @@
 }
 
 #portfolioButton:before {
+  margin: 0%;
+  padding: 0%;
   content: '';
   position: absolute;
-  width: 100px;
-  height: 100%;
+  width: 50px;
+  height: 35px;
   background-image: linear-gradient(
       120deg,
       rgba(255,255,255, 0) 30%,
-      rgba(255,255,255, .8),
-      rgba(255,255,255, 0) 70%
+      rgba(255,255,255, 0.8),
+      rgba(74, 6, 6, 0) 70%
   );
   top: 0;
   left: -100px;
-  animation: shine 3s infinite linear;
+  opacity: 0;
+  animation: shine 1s infinite;
 }
 
 @keyframes shine {
-  0% {left: -40px}
-  20% {left: 100%}
-  100% {left: 100%}
+  0% {
+    left: 0%;
+    opacity: 0;
+  }
+  50% {
+    left: 0%;
+    opacity: 1;
+  }
+  100% {
+    left: 70%;
+    opacity: 0;
+  }
 }
 
 .form-range {
