--- a/assets/style.css
+++ b/assets/style.css
@@ -1,8 +1,8 @@
 @import "compass/css3";
 /* Base styles */
 :root {
-  --primary-color: #5f4b32;
-  --secondary-color: #faf0d9;
+  --primary-color: #eee;
+  --secondary-color: #222;
 }
 /* Font face and imports */
 @font-face {
@@ -15,6 +15,7 @@
 /* Navbar and container styles */
 .navbar {
   font-family: 'Bookerly', serif;
+  height: 110px;
 }
 
 @media (max-width: 768px) {
@@ -27,6 +28,17 @@
 @media (max-width: 480px) {
   .navbar {
       font-size: 14px; /* Adjust as needed */
+      height: 110px;
+  }
+  .navbar-brand {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    padding: 0;
+  }
+  #portfolioButton {
+    display: none;
+    
   }
 }
 
@@ -101,9 +113,9 @@
 .footer {
   text-align: center;
   padding: 10px;
-  background-color: #222;
+  background-color: var(--secondary-color);
   border-top: 1px solid #ddd;
-  position: fixed;
+  position: absolute;
   bottom: 0;
   width: 100%;
   font-size: 14px;
@@ -111,7 +123,6 @@
   display: flex;
   gap: 30px;
   justify-content: center;
-
 }
 
 .footer p {
@@ -157,40 +168,29 @@
 
 #portfolioButton {
   position: relative;
-  top: 15px;
+  width: 80px;
+  height: 80px;
+  border-radius: 5px;
+  top: 5px;
+  background: url("profile-img.jpg") no-repeat; background-size: cover;
+  background-position: center;
+  transition: all 0.5s ease-in-out;
+  
 }
 
-#portfolioButton:before {
-  margin: 0%;
-  padding: 0%;
-  content: '';
-  position: absolute;
-  width: 50px;
-  height: 35px;
-  background-image: linear-gradient(
-      120deg,
-      rgba(255,255,255, 0) 30%,
-      rgba(255,255,255, 0.8),
-      rgba(74, 6, 6, 0) 70%
-  );
-  top: 0;
-  left: -100px;
-  opacity: 0;
-  animation: shine 1s infinite;
+#portfolioButton:hover {
+  animation: side-animation 1s infinite;
 }
 
-@keyframes shine {
+@keyframes side-animation {
   0% {
-    left: 0%;
-    opacity: 0;
+    box-shadow: 5px 5px white;
   }
-  50% {
-    left: 0%;
-    opacity: 1;
+  50%{
+    box-shadow: 5px 5px rgb(238, 154, 90);
   }
   100% {
-    left: 70%;
-    opacity: 0;
+    box-shadow: 5px 5px grey;
   }
 }
 
