--- a/assets/style.css
+++ b/assets/style.css
@@ -115,7 +115,7 @@
   padding: 10px;
   background-color: var(--secondary-color);
   border-top: 1px solid #ddd;
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   font-size: 14px;
