--- a/assets/style.css
+++ b/assets/style.css
@@ -12,6 +12,9 @@
 
 @import url('https://fonts.googleapis.com/css?family=Bangers|Cinzel:400,700,900|Lato:100,300,400,700,900|Lobster|Lora:400,700|Mansalva|Muli:200,300,400,600,700,800,900|Open+Sans:300,400,600,700,800|Oswald:200,300,400,500,600,700|Roboto:100,300,400,500,700,900&display=swap');
 
+body{
+  background-color: var(--primary-color);
+}
 /* Navbar and container styles */
 .navbar {
   font-family: 'Bookerly', serif;
@@ -44,6 +47,7 @@
 
 .navbar-brand {
   font-family: 'Bookerly', serif;  
+  margin-top: 10px;
 }
 
 .container {
